# 114-1-Brain-Computer-Interface

./: README.md  pyproject.toml
hw2/: problem3.ipynb  report.md
