[project]
name = "114-1-brain-computer-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.2.1",
    "mne>=1.8.0",
    "mne-icalabel>=0.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
]
